--- a/templates/components/system.html
+++ b/templates/components/system.html
@@ -160,11 +160,11 @@ power_icon %}
   .system-icon {
     width: 16px;
     height: 16px;
-    color: #b77d3c;
+    color: #68784e;
   }
 
   .system-label span {
-    color: #786c4e;
+    color: #68784e;
     font-size: 0.875rem;
   }
 
