--- a/templates/components/weather.html
+++ b/templates/components/weather.html
@@ -198,7 +198,7 @@
     width: 48px;
     height: 48px;
     margin: 0 auto 8px;
-    color: #b77d3c;
+    color: #68784e;
   }
 
   .current-temp {
@@ -209,7 +209,7 @@
   }
 
   .weather-condition {
-    color: #786c4e;
+    color: #68784e;
     font-size: 0.875rem;
   }
 
@@ -246,11 +246,11 @@
   .environment-label svg {
     width: 16px;
     height: 16px;
-    color: #b77d3c;
+    color: #68784e;
   }
 
   .environment-label span {
-    color: #786c4e;
+    color: #68784e;
     font-size: 0.75rem;
   }
 
@@ -291,7 +291,7 @@
   }
 
   .detail-label {
-    color: #786c4e;
+    color: #68784e;
     font-size: 0.75rem;
   }
 
@@ -324,7 +324,7 @@
   }
 
   .sun-label .sun-icon {
-    color: #b77d3c;
+    color: #68784e;
   }
 
   .sun-label .moon-icon {
@@ -332,7 +332,7 @@
   }
 
   .sun-label span {
-    color: #786c4e;
+    color: #68784e;
     font-size: 0.75rem;
   }
 
@@ -354,7 +354,7 @@
   }
 
   .forecast-day {
-    color: #786c4e;
+    color: #68784e;
     width: 32px;
     font-size: 0.75rem;
   }
@@ -362,7 +362,7 @@
   .forecast-icon {
     width: 16px;
     height: 16px;
-    color: #b77d3c;
+    color: #68784e;
   }
 
   .forecast-temp {
