support 6 gpio pins

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <!-- Right Column -->
 <div class="right-column">
-  {% include 'components/starlink.html' %} {% include 'components/system.html'
+  {% include 'components/switches.html' %} {% include 'components/system.html'
   %}
 </div>
 {% endblock %}
